# Streamlit_DE25

./: README.md  pyproject.toml
src/f1_package/: __init__.py
