[project]
name = "f1-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Filip Farley", email = "filip@farley.se" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2",
    "pandas>=3.0.2",
    "streamlit>=1.57.0",
]

[project.scripts]
f1-package = "f1_package:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
